--- a/index.html
+++ b/index.html
@@ -7,7 +7,13 @@
     <title>Vite App</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app">
+      <div class="tilt-container">
+        <div class="tilting-word">
+          TILT ME
+        </div>
+      </div>
+    </div>
     <script type="module" src="/main.js"></script>
   </body>
 </html>
