--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div id="app">
       <div class="tilt-container">
         <div class="tilting-word">
-          TILT ME
+          CLICK ME
         </div>
       </div>
     </div>
